--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
 script:
 - wget http://central.maven.org/maven2/io/swagger/swagger-codegen-cli/2.3.1/swagger-codegen-cli-2.3.1.jar -O swagger-codegen-cli.jar
-- java -jar swagger-codegen-cli.jar generate -l html2 -i swagger.yaml
-- cat index.html
+- java -jar swagger-codegen-cli.jar generate -l html2 -i swagger.yaml -o docs/api-spec
